--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-*.svg
+# vim temp files
 *.swp
+# Compiled python modules.
 *.pyc
+# Setuptools distribution folder.
+/dist/
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
