--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@
 /dist/
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
-# ignore python pickle files
+# ignore python pickle files (may get generated when running example code)
 *.pkl
+# ignore svg (may get generated when running example code)
+*.svg
+# ignore yaml files (may get generated when running example code)
+*.yaml
